# QUAD

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  activate.ps1  bootstrap.bat  bootstrap.ps1  deploy.sh  install-client.sh  install.sh  launch.sh  pyproject.toml  setup.sh
.claude/: settings.json
.claude/skills/: quad-codegen.md  quad-configure.md  quad-convert.md  quad-doctor.md  quad-profile.md  quad-quickstart.md  quad-recommend.md
.cursor/rules/: quad.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  real-hw.yml  release.yml
configs/: quad.toml.example
configs/device_profiles/: qcs2210.json  snapdragon_8_elite.json  (+1 more)
docs/: BACKEND_COMPLETION_DEPENDENCIES.md  CLIENT_INSTALL.md  CLIENT_SERVER_ARCHITECTURE.md  Current_Status_And_Roadmap.docx  Design_Document_QUAD_Agent.docx  GAP_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IOT_DEPENDENCIES.xlsx  PRD_Qualcomm_DevWorkflows_v3.docx  PREREQUISITES.md  PRODUCTION_READINESS_REVIEW_2026-05-08.md  QUAD_Executive_Pitch.docx  QUAD_Executive_Pitch.pptx  QUAD_Platform_Design_v2.docx  QUAD_Platform_Implementation_Guide.md  QUAD_Sample_App_Prompts.docx  QUAD_Server_Guide.docx  QUAD_User_Journey.pptx  QUAD_vs_CUDA_Gap_Analysis.md  REAL_HARDWARE.md  REAL_HARDWARE_CI.md  REMAINING_PHASES.md  SAMPLE_APP_REPORT.md  SERVER_INSTALL.md  USAGE.md  USAGE_GUIDE.docx  generate_executive_pitch.py  generate_status_and_roadmap.py  generate_user_guides.py  generate_user_journey_pptx.py
examples/: run_results.json  sample_app.py  sample_app_real_hw.py
scripts/: dump_doc_summary.py  gen_iot_dependencies_xlsx.py  generate_prompts_doc.py  helpers.sh  patch_legacy_docs.py  scan_legacy_docs.py  setup_sdk.sh
tests/: conftest.py
(+269 files in other folders)
