[project]
name = "quad-agent"
version = "0.3.0"
description = "QUAD — Qualcomm Unified Agent for Developers. MCP server abstracting Qualcomm SDKs for AI inference workflows."
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Qualcomm DevRel"}]
readme = "README.md"

dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "structlog>=24.0",
    "httpx>=0.27",
    "aiofiles>=24.0",
    "tomli>=2.0; python_version<'3.11'",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "anyio[asyncio]>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
real = [
    "asyncssh>=2.14",
    "paramiko>=3.4",
    "pyserial>=3.5",
    "onnx>=1.14",
]

[project.scripts]
quad-server = "quad.server.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::DeprecationWarning:anyio",
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "A", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[tool.coverage.run]
source = ["src/quad"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
